fix z-indexing

--- a/src/features/projects/styles/ProjectsMap.module.scss
+++ b/src/features/projects/styles/ProjectsMap.module.scss
@@ -368,7 +368,7 @@
   box-shadow: 0px 3px 6px #00000029;
   border-radius: 9px;
   animation: fade_in_show 0.5s;
-  z-index: 11;
+  z-index: 12;
 }
 
 @keyframes fade_in_show {
